# LuaCAD

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  _todo_test_export_wrl.lua  _todo_test_pyramid_cut.lua  flake.nix  lib_cad.lua  lib_cad_2d.lua  lib_cad_3d.lua  lib_cad_core.lua  lib_cad_export.lua  lib_cad_settings.lua  lib_cad_stl.lua  lib_cad_transform.lua  lib_dxf.lua  lib_geometry.lua  lib_vector.lua  luacad.lua  luascad  luascad.lua  makefile  template_cad.lua  template_dfx.lua  test_cube.lua  test_diabolo_cylindric.lua  test_dxf_test_arc.lua  test_dxf_test_polygon.lua  test_error.lua  test_error2.lua  test_path.lua  test_simple.lua  test_sphere.lua  test_watch.lua
.github/workflows/: build.yml  pages.yml
OpenCSG/src/: opencsg_ffi.cpp  opencsg_ffi.h
crates/luacad/: Cargo.toml
crates/luacad-studio/: Cargo.toml
crates/luacad-studio/src/: app.rs  camera.rs  csg_tree.rs  editor.rs  egui_integration.rs  gl_context.rs  input.rs  main.rs  scene.rs  ui.rs
crates/luacad/src/: bosl.rs  export.rs  geometry.rs  lib.rs  linter.rs  lua_engine.rs  main.rs  render.rs  scad_export.rs
crates/luacad/tests/: example_snapshots.rs
crates/luacad/tests/snapshots/: example_snapshots__box_3mf.snap  example_snapshots__box_obj.snap  example_snapshots__box_ply.snap  example_snapshots__box_scad.snap  example_snapshots__box_stl.snap  example_snapshots__customizer_3mf.snap  example_snapshots__customizer_obj.snap  example_snapshots__customizer_ply.snap  example_snapshots__customizer_scad.snap  example_snapshots__customizer_stl.snap  example_snapshots__difference_3mf.snap  example_snapshots__difference_obj.snap  example_snapshots__difference_ply.snap  example_snapshots__difference_scad.snap  example_snapshots__difference_stl.snap  example_snapshots__gear_3mf.snap  example_snapshots__gear_obj.snap  example_snapshots__gear_ply.snap  example_snapshots__gear_scad.snap  example_snapshots__gear_stl.snap  example_snapshots__literal_openscad_3mf.snap  example_snapshots__literal_openscad_obj.snap  example_snapshots__literal_openscad_ply.snap  example_snapshots__literal_openscad_scad.snap  example_snapshots__literal_openscad_stl.snap  example_snapshots__rounded_rectangle_3mf.snap  example_snapshots__rounded_rectangle_obj.snap  example_snapshots__rounded_rectangle_ply.snap  example_snapshots__rounded_rectangle_scad.snap  example_snapshots__rounded_rectangle_stl.snap  example_snapshots__simple_3mf.snap  example_snapshots__simple_car_3mf.snap  example_snapshots__simple_car_obj.snap  example_snapshots__simple_car_ply.snap  example_snapshots__simple_car_scad.snap  example_snapshots__simple_car_stl.snap  example_snapshots__simple_obj.snap  example_snapshots__simple_ply.snap  example_snapshots__simple_scad.snap  example_snapshots__simple_stl.snap  (+5 more)
crates/manifold-sys/: Cargo.toml  build.rs
crates/opencsg-sys/: Cargo.toml  build.rs
examples/: bosl_demo.lua  box.lua  car.lua  csg.lua  csg_modules.lua  customizer.lua  difference.lua  gear.lua  literal_openscad.lua  rounded_rectangle.lua  simple.lua  simple_car.lua  tostring_demo.lua
legacy_lua/: .gitignore  CLAUDE.md  makefile
legacy_lua/examples/: box.lua  car.lua  customizer.lua  difference.lua  literal-openscad.lua  rounded_rectangle.lua  tostring_demo.lua
legacy_lua/tests/: run_tests.lua  test_circle.lua  test_cube.lua  test_diabolo_cylindric.lua  test_dxf_test_arc.lua  test_dxf_test_polygon.lua  test_export_wrl.lua  test_longhole.lua  test_multmatrix.lua  test_projection.lua  test_rect_variants.lua  (+5 more)
src/: app.rs  editor.rs  export.rs  geometry.rs  lua_engine.rs  main.rs  scad_export.rs  scene.rs  theme.rs  ui.rs
tests/: _todo_test_export_wrl.lua  _todo_test_pyramid_cut.lua  run_tests.lua  test_circle.lua  test_cube.lua  test_customizer.lua  test_diabolo_cylindric.lua  test_dxf_test_arc.lua  test_dxf_test_polygon.lua  test_export_wrl.lua  test_geometry.lua  test_longhole.lua  test_minkowski.lua  test_multmatrix.lua  test_projection.lua  test_pyramid_cut.lua  test_rect_variants.lua  test_rotate_extrude.lua  test_sign.lua  test_simple.lua  test_sphere.lua  test_square.lua  test_text.lua  test_translate.lua  test_var_errors.lua  test_vector_cross.lua
website/: cheatsheet.html  examples.html  index.html  openscad-to-luacad.html  screen.css
website-src/: build_examples.lua  example_template.html  examples_footer.html  examples_header.html
(+18 files in other folders)
