[package]
name = "luacad_studio"
version = "0.1.0"
edition = "2024"

[dependencies]
three-d = { version = "0.18", features = ["window", "egui-gui"] }
egui_extras = { version = "0.29", features = ["default", "syntect"] }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
csgrs = { version = "0.20", default-features = false, features = ["f32", "delaunay"] }
arboard = "3"
