[package]
name = "luacad"
version = "0.1.0"
edition = "2024"
description = "A Lua-based CAD scripting engine built on CSG operations"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ad-si/LuaCAD"

[dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored"] }
csgrs = { version = "0.20", default-features = false, features = ["f32", "delaunay", "ply-io", "stl-io", "obj-io", "chull-io", "offset"] }
nalgebra = "0.33"
threemf = "0.5"
selene-lib = { version = "0.30", default-features = false, features = ["lua54"] }
full_moon = { version = "2", features = ["lua54"] }
toml = "0.7"
serde_yaml = "0.9"
manifold-sys = { path = "../manifold-sys" }

[dev-dependencies]
insta = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
